updating html documentation

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>State Capitals API</h1>
-    <p>Please use localhost:8000/api/state-capitals</p>
+    <p>Please use https://state-capitals-api.herokuapp.com/api/state-capitals</p>
 </body>
 </html>
